@@ -1,3 +1,10 @@
+Mon Sep  1 01:26:20 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/CodeGenerator.java: static function
+	  should be local in the file.
+
+	* test: test it.
+
 Sun Aug 31 20:09:14 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/ast/CastNode.java: remove unused method
